test_suite/tests/ui/fail/invalid_attr_value_for_subcommand/invalid_subcommand_with_help.rs
use clapi::macros::*;

#[command]
fn app(){
    #[subcommand(with_help=123)]
    fn child(){}
}

fn main(){}